corrects alignment

--- a/src/components/micro/comments/comments.css
+++ b/src/components/micro/comments/comments.css
@@ -1,5 +1,16 @@
 
 /*--------------------------------------------------------------
+## Comments
+--------------------------------------------------------------*/
+.comment-content a {
+  word-wrap: break-word;
+}
+
+.bypostauthor {
+  display: block;
+}
+
+/*--------------------------------------------------------------
 # Forms
 --------------------------------------------------------------*/
 
@@ -10,7 +21,6 @@
   background: #ffb401;
   border: 0.0625rem solid #bdbdbd;
   border-radius: 0.1875rem;
-  margin: 0.5rem;
   padding: 0.75rem 0.5rem 1.125rem;
   box-shadow: 0 0.125rem 0.125rem 0 rgba(0, 0, 0, 0.14), 0 0.0625rem 0.3125rem 0 rgba(0, 0, 0, 0.12), 0 0.1875rem 0.0625rem -0.125rem rgba(0, 0, 0, 0.2);
 }
